give better spacing on form fix after form panel

--- a/_new-components/resets-and-fixes/form-spacing.less
+++ b/_new-components/resets-and-fixes/form-spacing.less
@@ -14,6 +14,9 @@
         @media @medium {width:~"calc(100% - 30px)";}
         box-shadow: 1px 1px 5px fade(@pure-black, 50%);
     }
+    #form-success-content-div {
+        padding:10px 15px;
+    }
 }
 
 p:empty {margin-bottom:0!important;}
