--- a/get-started/get-started.css
+++ b/get-started/get-started.css
@@ -742,6 +742,9 @@ ul.circle-list.white > li:before {
     width: calc(100% - 30px);
   }
 }
+#page-hero.form-fix #form-success-content-div {
+  padding: 10px 15px;
+}
 p:empty {
   margin-bottom: 0!important;
 }
